2014-04-22  Marc Glisse  <marc.glisse@inria.fr>

	PR libstdc++/43622
	* rtti.c (emit_support_tinfo_1): New function, extracted from
	emit_support_tinfos.
	(emit_support_tinfos): Call it and iterate on registered_builtin_types.

2014-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/59073
	* parser.c (cp_parser_omp_parallel): If cp_parser_omp_for
	fails, don't set OM_PARALLEL_COMBINED and return NULL.

2014-04-18  Jason Merrill  <jason@redhat.com>

	DR 1571
	* call.c (reference_binding): Recurse on user-defined conversion.

	PR c++/60872
	* call.c (standard_conversion): Don't try to apply restrict to void.

2014-04-16  Marc Glisse  <marc.glisse@inria.fr>

	* decl.c (reshape_init_r): Handle a single element of vector type.

2014-04-16  Patrick Palka  <patrick@parcs.ath.cx>

	PR c++/60765
	* decl2.c (cplus_decl_attributes): Handle
	pointer-to-member-function declarations.

2014-04-16  Patrick Palka  <patrick@parcs.ath.cx>

	PR c++/60764
	* call.c (build_user_type_coversion): Use build_dummy_object
	to create the placeholder object for a constructor method call.
	(build_special_member_call): Likewise.
	(build_over_call): Check for the placeholder object with
	is_dummy_object.
	(build_new_method_call_1): Likewise.  Don't attempt to resolve
	a dummy object for a constructor method call.

2014-04-16  Paul Pluzhnikov  <ppluzhnikov@google.com>

	PR c++/59295
	* friend.c (add_friend, make_friend_class): Move repeated friend
	warning under Wredundant_decls.

2014-04-15  Paolo Carlini  <paolo.carlini@oracle.com>

	* decl.c (duplicate_decls): Remove redundant TYPE_NAME use.
	* name-lookup.c (pushdecl_maybe_friend_1): Likewise.
	(do_class_using_decl): Likewise.
	* mangle.c (dump_substitution_candidates): Use TYPE_NAME_STRING.

2014-04-15  Jakub Jelinek  <jakub@redhat.com>

	PR plugins/59335
	* Make-lang.h (CP_PLUGIN_HEADERS): Add type-utils.h.

2014-04-14  Paolo Carlini  <paolo.carlini@oracle.com>

	* cp-tree.h (TYPE_IDENTIFIER): Remove declaration.
